# govee-tui

./: .gitignore  CLAUDE.md  Cargo.toml  PROPOSAL.md  README.md  demo.tape  justfile  polish.tape  polish_small.tape
.github/workflows/: audit.yml  ci.yml  release.yml
govee-api2/: Cargo.toml  README.md
govee-api2/examples/: scenes.rs
govee-api2/src/: client.rs  error.rs  lib.rs  types.rs
govee-api2/tests/: client_tests.rs
scripts/: README.md  control-device-v2.sh  control-device.sh  get-device-state.sh  get-devices.sh  test-api.sh
src/: cache.rs  config.rs  main.rs
src/api/: commands.rs  mod.rs  models.rs  new_client.rs
src/db/: cache.rs  mod.rs  schema.rs
src/ui/: app.rs  async_ops.rs  focus.rs  handlers.rs  handlers_v2.rs  layout.rs  mod.rs  renderer.rs  theme.rs  view_state.rs  view_state_v2.rs
src/ui/widgets/: brightness.rs  color_groups.rs  color_picker.rs  detail_view.rs  device_list.rs  footer.rs  mod.rs  overview.rs  panel_view.rs  scene_picker.rs  status_bar.rs
