[package]
name = "govee-tui"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"
description = "Clean, colorful TUI for controlling Govee smart devices"
repository = "https://github.com/jhheider/govee-tui"
keywords = ["govee", "tui", "smart-home", "iot"]
categories = ["command-line-utilities"]

[dependencies]
# Govee API
govee-api2 = { path = "govee-api2" }

# TUI
ratatui = "0.30"
crossterm = "0.29"

# CLI
clap = { version = "4.6.1", features = ["derive"] }

# Database
rusqlite = { version = "0.39", features = ["bundled"] }

# Async runtime
tokio = { version = "1.52.2", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = "0.4"

# Unicode
unicode-width = "0.2.2"


# Config
toml = "1.1"
dirs = "6.0"

# Color names
color-name = "1.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
