[workspace]
members = ["govee-api2"]

[workspace.package]
edition = "2021"
authors = ["Jacob Heider <jhheider@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jhheider/govee-tui"

[workspace.dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.29"
# CLI
clap = { version = "4.6.1", features = ["derive"] }
# Async runtime
tokio = { version = "1.52.1" }
futures = "0.3"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
color-eyre = "0.6.5"
thiserror = "2.0"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Config
toml = "1.1"
dirs = "6.0"
# Color names
color-name = "1.2"
# API client (govee-api2)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
wiremock = "0.6"

[package]
name = "govee-tui"
version = "0.15.0"edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Clean, colorful TUI for controlling Govee smart devices"
keywords = ["govee", "tui", "smart-home", "iot"]
categories = ["command-line-utilities"]

[dependencies]
govee-api2 = { path = "govee-api2", version = "0.15.0" }
ratatui = { workspace = true }
crossterm = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
color-eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
color-name = { workspace = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
