[package]
name = "govee-api2"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"
description = "Rust client for Govee's v2 router-based API with support for devices and groups"
repository = "https://github.com/jhheider/govee-tui"
keywords = ["govee", "smart-home", "iot", "api-client"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros"] }

[dev-dependencies]
tokio-test = "0.4"
